config.json: updated label in nav_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -6,7 +6,7 @@
         "has_nav": true,
         "nav_links": [
             {
-                "label": "About",
+                "label": "Projects",
                 "url": "/features",
                 "style": "link"
             },
