--- a/content/data/config.json
+++ b/content/data/config.json
@@ -26,7 +26,7 @@
                 "style": "link"
             },
             {
-                "label": "Link Up",
+                "label": "LinkedIn",
                 "url": "/contact",
                 "style": "primary"
             }
