config.json: updated url in nav_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -27,7 +27,7 @@
             },
             {
                 "label": "LinkedIn",
-                "url": "/contact",
+                "url": "https://www.linkedin.com/in/elisabeth-vehling/",
                 "style": "primary"
             }
         ]
