config.json: updated style in nav_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -28,7 +28,7 @@
             {
                 "label": "LinkedIn",
                 "url": "https://www.linkedin.com/in/elisabeth-vehling/",
-                "style": "primary"
+                "style": "secondary"
             }
         ]
     },
