config.json: updated new_window in nav_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -28,7 +28,8 @@
             {
                 "label": "LinkedIn",
                 "url": "https://www.linkedin.com/in/elisabeth-vehling/",
-                "style": "secondary"
+                "style": "secondary",
+                "new_window": true
             }
         ]
     },
