--- a/content/data/config.json
+++ b/content/data/config.json
@@ -30,6 +30,14 @@
                 "url": "https://www.linkedin.com/in/elisabeth-vehling/",
                 "style": "secondary",
                 "new_window": true
+            },
+            {
+                "label": "lorem-ipsum",
+                "url": "#",
+                "style": "link",
+                "new_window": false,
+                "no_follow": false,
+                "type": "action"
             }
         ]
     },
