--- a/content/data/config.json
+++ b/content/data/config.json
@@ -32,7 +32,7 @@
                 "new_window": true
             },
             {
-                "label": "lorem-ipsum",
+                "label": "GitHub",
                 "url": "#",
                 "style": "link",
                 "new_window": false,
