config.json: updated url in nav_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -33,7 +33,7 @@
             },
             {
                 "label": "GitHub",
-                "url": "#",
+                "url": "https://github.com/evehling",
                 "style": "link",
                 "new_window": false,
                 "no_follow": false,
