--- a/content/data/config.json
+++ b/content/data/config.json
@@ -34,7 +34,7 @@
             {
                 "label": "GitHub",
                 "url": "https://github.com/evehling",
-                "style": "secondary",
+                "style": "primary",
                 "new_window": false,
                 "no_follow": false,
                 "type": "action"
