--- a/content/data/config.json
+++ b/content/data/config.json
@@ -35,7 +35,7 @@
                 "label": "GitHub",
                 "url": "https://github.com/evehling",
                 "style": "primary",
-                "new_window": false,
+                "new_window": true,
                 "no_follow": false,
                 "type": "action"
             }
