--- a/content/data/config.json
+++ b/content/data/config.json
@@ -21,7 +21,7 @@
                 "style": "link"
             },
             {
-                "label": "Style Guide",
+                "label": "Resume",
                 "url": "/style-guide",
                 "style": "link"
             },
