config.json: updated style in nav_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -47,7 +47,7 @@
             {
                 "label": "Contact Me!",
                 "url": "/contact",
-                "style": "link"
+                "style": "primary"
             },
             {
                 "label": "Privacy and Terms",
