config.json: updated new_window in nav_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -47,7 +47,8 @@
             {
                 "label": "Contact Me!",
                 "url": "/contact",
-                "style": "primary"
+                "style": "primary",
+                "new_window": true
             },
             {
                 "label": "Privacy and Terms",
