--- a/content/data/config.json
+++ b/content/data/config.json
@@ -61,7 +61,7 @@
             {
                 "label": "Twitter",
                 "url": "https://twitter.com/",
-                "style": "link",
+                "style": "primary",
                 "new_window": true
             },
             {
