config.json: updated label in nav_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -51,7 +51,7 @@
                 "new_window": true
             },
             {
-                "label": "Privacy and Terms",
+                "label": "Medium",
                 "url": "/terms",
                 "style": "link"
             }
