config.json: updated nav_links in footer

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -54,6 +54,14 @@
                 "label": "Medium",
                 "url": "/terms",
                 "style": "link"
+            },
+            {
+                "label": "lorem-ipsum",
+                "url": "#",
+                "style": "link",
+                "new_window": false,
+                "no_follow": false,
+                "type": "action"
             }
         ],
         "has_social": true,
