config.json: updated label in nav_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -56,7 +56,7 @@
                 "style": "link"
             },
             {
-                "label": "lorem-ipsum",
+                "label": "Dev",
                 "url": "#",
                 "style": "link",
                 "new_window": false,
