--- a/content/data/config.json
+++ b/content/data/config.json
@@ -62,6 +62,14 @@
                 "new_window": false,
                 "no_follow": false,
                 "type": "action"
+            },
+            {
+                "label": "lorem-ipsum",
+                "url": "#",
+                "style": "link",
+                "new_window": false,
+                "no_follow": false,
+                "type": "action"
             }
         ],
         "has_social": true,
