config.json: updated label in nav_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -72,7 +72,7 @@
                 "type": "action"
             },
             {
-                "label": "lorem-ipsum",
+                "label": "LinkedIn",
                 "url": "#",
                 "style": "link",
                 "new_window": false,
