--- a/content/data/config.json
+++ b/content/data/config.json
@@ -47,7 +47,7 @@
             {
                 "label": "Contact Me!",
                 "url": "/contact",
-                "style": "primary",
+                "style": "secondary",
                 "new_window": true
             },
             {
