config.json: updated style in nav_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -53,7 +53,7 @@
             {
                 "label": "Medium",
                 "url": "/terms",
-                "style": "secondary"
+                "style": "link"
             },
             {
                 "label": "Dev",
