--- a/content/data/config.json
+++ b/content/data/config.json
@@ -82,7 +82,7 @@
         ],
         "has_social": true,
         "social_links": [],
-        "content": "&copy; Elisabeth Vehling. All rights reserved. This Jamstack site was created with <a href=\"https://www.stackbit.com/?utm_source=deployed-footer\" target=\"_blank\" rel=\"noopener\">Stackbit</a>. Create yours <a href=\"https://app.stackbit.com/create?theme=starter&utm_source=deployed-footer\" target=\"_blank\" rel=\"noopener\"</a>"
+        "content": "&copy; Elisabeth Vehling. All rights reserved. This Jamstack site was created with <a href=\"https://www.stackbit.com/?utm_source=deployed-footer\" target=\"_blank\" rel=\"noopener\">Stackbit</a>. Create yours <a href=\"https://app.stackbit.com/create?theme=starter&utm_source=deployed-footer\" target=\"_blank\" r</a>"
     },
     "domain": "https://eevee-b7dff.netlify.app"
 }
