--- a/content/data/config.json
+++ b/content/data/config.json
@@ -80,7 +80,7 @@
                 "type": "action"
             }
         ],
-        "has_social": true,
+        "has_social": false,
         "social_links": [],
         "content": "&copy; Elisabeth Vehling. All rights reserved. This Jamstack site was created with <a href=\"https://www.stackbit.com/?utm_source=deployed-footer\" target=\"_blank\" rel=\"noopener\">Stackbit!</a>"
     },
