config.json: updated url in nav_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -52,7 +52,7 @@
             },
             {
                 "label": "Medium",
-                "url": "/terms",
+                "url": "https://medium.com/@evehling/hello-world-15cce965e01d",
                 "style": "link"
             },
             {
