config.json: updated new_window in nav_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -53,7 +53,8 @@
             {
                 "label": "Medium",
                 "url": "https://medium.com/@evehling/hello-world-15cce965e01d",
-                "style": "link"
+                "style": "link",
+                "new_window": true
             },
             {
                 "label": "Dev",
