config.json: updated url in nav_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -58,7 +58,7 @@
             },
             {
                 "label": "Dev",
-                "url": "https://dev.to/dashboard",
+                "url": "https://dev.to/evehling",
                 "style": "link",
                 "new_window": false,
                 "no_follow": false,
