config.json: updated new_window in nav_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -60,7 +60,7 @@
                 "label": "Dev",
                 "url": "https://dev.to/evehling",
                 "style": "link",
-                "new_window": false,
+                "new_window": true,
                 "no_follow": false,
                 "type": "action"
             },
