--- a/content/data/config.json
+++ b/content/data/config.json
@@ -74,7 +74,7 @@
             },
             {
                 "label": "LinkedIn",
-                "url": "#",
+                "url": "https://www.linkedin.com/in/elisabeth-vehling/",
                 "style": "link",
                 "new_window": false,
                 "no_follow": false,
