--- a/content/data/config.json
+++ b/content/data/config.json
@@ -76,7 +76,7 @@
                 "label": "LinkedIn",
                 "url": "https://www.linkedin.com/in/elisabeth-vehling/",
                 "style": "link",
-                "new_window": false,
+                "new_window": true,
                 "no_follow": false,
                 "type": "action"
             }
