--- a/content/data/config.json
+++ b/content/data/config.json
@@ -85,5 +85,5 @@
         "social_links": [],
         "content": "&copy; Elisabeth Vehling. All rights reserved. This Jamstack site was created with <a href=\"https://www.stackbit.com/?utm_source=deployed-footer\" target=\"_blank\" rel=\"noopener\">Stackbit!</a>"
     },
-    "domain": "https://eevee-b7dff.netlify.app"
+    "domain": "https://eevee-.netlify.app"
 }
