--- a/content/data/config.json
+++ b/content/data/config.json
@@ -1,5 +1,5 @@
 {
-    "title": "Stackbit Starter Theme",
+    "title": "Portfolio Site",
     "path_prefix": "/",
     "header": {
         "title": "Elisabeth",
