--- a/content/data/team/miles-tone.yaml
+++ b/content/data/team/miles-tone.yaml
@@ -2,7 +2,7 @@ id: miles-tone
 link: blog/author/miles-tone
 first_name: Elisabeth
 last_name: Vehling
-photo: images/miles-tone.jpg
+photo: /images/Profpic.jpg
 photo_alt: Miles Tone
 bio: >-
   Aliquam vestibulum morbi blandit cursus risus at ultrices mi. Massa placerat
