config.json: updated title in header

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -2,7 +2,7 @@
     "title": "Portfolio Site",
     "path_prefix": "/",
     "header": {
-        "title": "Elisabeth",
+        "title": "Elisabeth Vehling",
         "has_nav": true,
         "nav_links": [
             {
