--- a/content/data/config.json
+++ b/content/data/config.json
@@ -7,7 +7,7 @@
         "nav_links": [
             {
                 "label": "About",
-                "url": "/features",
+                "url": "/about",
                 "style": "link"
             },
             {
