--- a/content/data/config.json
+++ b/content/data/config.json
@@ -12,7 +12,7 @@
             },
             {
                 "label": "Projects",
-                "url": "/blog",
+                "url": "/features",
                 "style": "link"
             },
             {
