config.json: updated url in nav_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -22,7 +22,7 @@
             },
             {
                 "label": "Resume",
-                "url": "/style-guide",
+                "url": "#",
                 "style": "link"
             },
             {
