config.json: updated new_window in nav_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -23,7 +23,8 @@
             {
                 "label": "Resume",
                 "url": "#",
-                "style": "link"
+                "style": "link",
+                "new_window": true
             },
             {
                 "label": "LinkedIn",
