config.json: updated url in nav_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -22,7 +22,7 @@
             },
             {
                 "label": "Resume",
-                "url": "#",
+                "url": "https://drive.google.com/file/d/1SBnFD7Cbyp_6019BXBY5OmjuBCV80A3f/view",
                 "style": "link",
                 "new_window": true
             },
