dianne-ameter.yaml: updated first_name

--- a/content/data/team/dianne-ameter.yaml
+++ b/content/data/team/dianne-ameter.yaml
@@ -1,5 +1,5 @@
 id: elisabeth-vehling
-first_name: Dianne
+first_name: Elisabeth
 last_name: Ameter
 photo: images/dianne-ameter.jpg
 photo_alt: Dianne Ameter
