dianne-ameter.yaml: updated last_name

--- a/content/data/team/dianne-ameter.yaml
+++ b/content/data/team/dianne-ameter.yaml
@@ -1,6 +1,6 @@
 id: elisabeth-vehling
 first_name: Elisabeth
-last_name: Ameter
+last_name: Vehling
 photo: images/dianne-ameter.jpg
 photo_alt: Dianne Ameter
 bio: >-
