--- a/content/data/config.json
+++ b/content/data/config.json
@@ -1,5 +1,5 @@
 {
-    "title": "Contact Me",
+    "title": "Projects",
     "path_prefix": "/",
     "header": {
         "title": "Elisabeth Vehling",
