--- a/content/data/config.json
+++ b/content/data/config.json
@@ -17,7 +17,7 @@
             },
             {
                 "label": "Blog",
-                "url": "/blog",
+                "url": "https://medium.com/@evehling",
                 "style": "link"
             },
             {
